# atrl

./: .gitignore  Cargo.toml  build.rs  deny.toml  rustfmt.toml
crates/camera/: Cargo.toml
crates/camera/src/: camera_plugin.rs  camera_settings.rs  cameras.rs  lib.rs  main_camera.rs
crates/camera/src/resources/: camera_settings_resource.rs  loaded_camera.rs
crates/camera/src/systems/: spawn_cameras.rs  spawn_main_camera.rs
crates/common/: Cargo.toml
crates/common/src/: common_plugin.rs  cp437.rs  error.rs  file_utils.rs  game_state.rs  interlop.rs  lib.rs  misc.rs  theme_type.rs  tile_type.rs  white_pixel.rs
crates/common/src/components/: equipable.rs  health.rs
crates/common/src/data/: game_context.rs  game_state.rs
crates/common/src/direction/: bitmap.rs  cardinal.rs  direction.rs  iter.rs  ordinal.rs  table.rs
crates/common/src/events/: event_plugin.rs
crates/common/src/fov/: adams_fov.rs  visibility_compute.rs  visibility_map.rs
crates/common/src/geometry/: distance.rs  shape.rs  shape_iter.rs  shape_iter_exclusive.rs
crates/common/src/grid/: axis.rs  grid.rs  grid_iterable.rs  grid_layer.rs  grid_param.rs  point2d.rs  size2d.rs
crates/common/src/macros/: generic_macros.rs  primative.rs  switch_in_game_state.rs
crates/common/src/random/: noise.rs  prht.rs  prng.rs  random.rs
crates/common/src/states/: state_next.rs
crates/common/src/system_params/: player_param.rs
crates/common/src/utils/: axis.rs  bitgrid.rs  canvas.rs  file_utils.rs  grid.rs  point2d.rs  range.rs  size2d.rs  white_pixel.rs
crates/components/: Cargo.toml
crates/components/src/: equipable.rs  equipment_slots.rs  health.rs  lib.rs  tags.rs
crates/components/src/ai_component/: ai_component.rs  ai_type.rs
crates/components/src/movement/: movement.rs  movement_type.rs
crates/components/src/position/: local_position.rs  world_position.rs
crates/components/src/vision/: vision.rs  vision_type.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  queries.rs  tileset_paths.rs
crates/data/src/actions/: action.rs  action_type.rs  attack_action.rs  movement_action.rs  wait_action.rs
crates/data/src/actors/: equipment_slot.rs  movement_type.rs  player_action.rs  vision_type.rs
crates/data/src/camera/: camera_id.rs
crates/data/src/components/: equipable.rs  field_of_view.rs  health.rs  tags.rs  target_visualizer.rs
crates/data/src/fov/: adams_fov.rs  af_fov.rs  bit_packer.rs  fov.rs  fov_provider.rs  fov_receiver.rs  grid_packer.rs  slope.rs  t_grid_packer2.rs  t_visibility_flags.rs  t_visibility_map_2d.rs  t_visibility_map_util.rs  visibility_compute.rs  visibility_flags.rs  visibility_map.rs  visibility_map_2d.rs  visibility_provider.rs
crates/data/src/game/: game_context.rs  game_stage.rs  game_state.rs
crates/data/src/map_gen/: map_architect.rs  map_gen_data.rs  map_generator.rs
crates/data/src/pathfinding/: astar.rs  path_map.rs  path_map_2d.rs  path_map_provider.rs  path_provider.rs  pathfinder.rs  pathmap.rs  pathmap_2d.rs
crates/data/src/resources/: font_paths.rs  game_settings.rs  mouse_position.rs  player_entity.rs  tile_ids.rs  tileset_ids.rs  tileset_paths.rs  timer.rs  turn_manager.rs
crates/data/src/system_params/: player_param.rs
crates/data/src/utilities/: error.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: ecs_plugin.rs  game_context.rs  game_plugin.rs  lib.rs  turn_state_plugin.rs
crates/game/src/ai/: ai_plugin.rs
crates/game/src/ecs/: systems_plugin.rs
crates/game/src/events/: actions.rs  event_cleaner.rs  event_plugin.rs
crates/game/src/game_map/: game_map_plugin.rs
crates/game/src/map/: map.rs  map_plugin.rs
crates/game/src/map_gen/: builder_chain.rs  common.rs  map_builder.rs
crates/game/src/map_gen_old/: builder_chain.rs
crates/game/src/player/: player_plugin.rs
crates/game/src/spawner/: spawner_plugin.rs
crates/game/src/systems/: action_queue.rs  cull_dead.rs  fov.rs  move_actors.rs  movement.rs  perform_turns.rs  player_input.rs  spawn_player.rs  update_targeting.rs  whos_turn.rs
crates/game/src/turn/: turn_plugin.rs
crates/game/src/turn_manager/: turn_manager.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  primative.rs
crates/map/: Cargo.toml
crates/map/src/: error.rs  file_utils.rs  lib.rs  loaded_tilesets.rs  map.rs  map_plugin.rs  paths.rs  tilemap_settings.rs
crates/map/src/functions/: create_tilemap.rs
crates/map/src/procgen/: builder_chain.rs  map_builder.rs
crates/map/src/renderer/: animated_tile.rs  animation_tile_bundle.rs  background_entity_holder.rs  background_tile.rs  background_tile_bundle.rs  foreground_tile.rs  foreground_tile_bundle.rs  map_context.rs  map_renderer.rs  render_actions.rs  white_pixel.rs
crates/map/src/resources/: loaded_tilesets.rs  theme_server.rs
crates/map/src/systems/: gen_tilemaps_for_maps.rs  load_first_map.rs  load_themes_into_theme_server.rs  load_tilesets.rs  redraw_map_renderers.rs  test_display.rs  update_animations.rs  update_tilemaps.rs
crates/map/src/themes/: animation.rs  color_definition.rs  frame.rs  serialized_object.rs  theme.rs  tile.rs  tile_like.rs  tileset.rs
crates/raws/: Cargo.toml
crates/raws/src/: font_assets.rs  lib.rs  raw_plugin.rs  raws.rs  splash_plugin.rs  texture_assets.rs
crates/raws/src/raw_master/: raw_master.rs  raws.rs  spawn.rs
crates/raws/src/resources/: asset_settings.rs  loaded_fonts.rs  loaded_tilesets.rs  texture_assets.rs
crates/raws/src/systems/: check_loaded_assets.rs  load_fonts.rs  load_textures.rs  load_tilesets.rs  splash.rs  wait_for_tilesets_to_load.rs
crates/raws/src/templates/: actor_template.rs  ai_template.rs  base_raw_component.rs  player_template.rs  stat_templates.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  map_renderer_plugin.rs  map_renderer_settings.rs
crates/saveload/: Cargo.toml
crates/saveload/src/: lib.rs  saveload_plugin.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  ui_plugin.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  range.rs
(+473 files in other folders)
