#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "BigBanana <lecoqjacob@gmail.com>"]
description = "Away Team Roguelike Game"
edition     = "2021"
homepage    = "https://github.com/Laocoon7/atrl"
license     = "BlueOak-1.0.0"
name        = "atrl"
readme      = "README.md"
repository  = "https://github.com/Laocoon7/atrl"
version     = "0.1.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/", "crates/"]
keywords   = ["game", "ascii", "roguelike"]
resolver   = "2"

#################################
#########       Workspaces
#################################
[workspace]
members = ["tools/ci", "tools/spancmp", "./crates/*"]

#################################
#########       Features
#################################
[features]
# configuration for release builds
release = [
  "bevy_embedded_assets",
  "atrl-camera/release",
  "atrl-common/release",
  "atrl-game/release",
  "atrl-map/release",
  "atrl-raws/release",
  "atrl-ui/release",
]

# default configurations
default = ["dev", "debug"]

# configuration for debugging information
debug = [
  "bevy-inspector-egui",
  "colored",
  "debug-graph",
  # "debug_asset_server",
  "trace",
  "atrl-camera/debug",
  "atrl-common/debug",
  "atrl-game/debug",
  "atrl-map/debug",
  "atrl-raws/debug",
  "atrl-ui/debug",
]

# default configuration while developing
dev = [
  "bevy/filesystem_watcher",
  "bevy/dynamic",
  "atrl-camera/dev",
  "atrl-common/dev",
  "atrl-game/dev",
  "atrl-map/dev",
  "atrl-raws/dev",
  "atrl-ui/dev",
]

# Parallelism
parallel = ["rayon"]

# Debugging
debug-graph        = ["bevy_mod_debugdump"]
debug_asset_server = ["bevy/debug_asset_server"]

# Tracing
trace        = ["bevy/trace"]
trace_chrome = ["bevy/trace_chrome"]
trace_tracy  = ["bevy/trace_tracy"]
wgpu_trace   = ["bevy/wgpu_trace"]

################################
#########       Optimizations
################################

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

################################
#########       Internal Crate Dependencies
################################
[workspace.dependencies]
atrl-camera   = { path = "crates/camera" }
atrl-common   = { path = "crates/common" }
atrl-game     = { path = "crates/game" }
atrl-map      = { path = "crates/map" }
atrl-raws     = { path = "crates/raws" }
atrl-saveload = { path = "crates/saveload" }
atrl-ui       = { path = "crates/ui" }

[dependencies]
atrl-camera = { workspace = true }
atrl-common = { workspace = true }
atrl-game   = { workspace = true }
atrl-map    = { workspace = true }
atrl-raws   = { workspace = true }
atrl-ui     = { workspace = true }

######################################
#########       Bevy
######################################
[workspace.dependencies.bevy]
default-features = false
features = [
  "bevy_asset",
  "bevy_winit",
  "png",
  "x11",
  "bevy_scene",
  "wayland",
  "bevy_core_pipeline",

  # Render
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",

  # File formats
  "png",
  "jpeg",
  "bmp",

  # Serialization
  "serialize",
]
version = "0.9"

######################################
#########       Assets
######################################
[workspace.dependencies.bevy_asset_loader]
features = ["stageless", "2d", "progress_tracking_stageless"]
git      = "https://github.com/banana-studios/bevy_asset_loader"

[workspace.dependencies.bevy_common_assets]
features = ["ron", "toml", "json"]
version  = "0.4.0"

[workspace.dependencies.bevy_tweening]
features = ["bevy_asset"]
git      = "https://github.com/djeedai/bevy_tweening"

######################################
#########       Input
######################################
[workspace.dependencies.leafwing-input-manager]
# features = ["egui"]
version = "0.7.0"

######################################
#########       Map Rendering
######################################
[workspace.dependencies.bevy_ecs_tilemap]
features = []
version  = "0.9"

[workspace.dependencies.bevy_tileset]
features = ["auto-tile"]
version  = "0.6"

[workspace.dependencies.bevy_tile_atlas]
default-features = false
version          = "0.5"

###############################
#########       Serialization   
###############################
[workspace.dependencies.ron]
version = "0.8"

[workspace.dependencies.serde]
features = ["derive"]
version  = "1"

######################################
#########       States
######################################
[workspace.dependencies.iyes_loopless]
features = ["states"]
git      = "https://github.com/banana-studios/iyes_loopless"

[workspace.dependencies.iyes_progress]
features = ["assets"]
git      = "https://github.com/banana-studios/iyes_progress"

[workspace.dependencies.banana_bevy_utils]
features = ["states"]
git      = "https://github.com/banana-studios/banana_bevy_utils"

######################################
#########       Random
######################################
[workspace.dependencies.noise]
version = "0.8"

[workspace.dependencies.rand]
version = "0.8"

[workspace.dependencies.rand_pcg]
features = ["serde1"]
version  = "0.3"

[workspace.dependencies.rand_seeder]
version = "0.2"

[workspace.dependencies.xxhash-rust]
features = ["xxh3", "const_xxh3"]
version  = "0.8"

######################################
#########       UI
######################################
# [workspace.dependencies.bevy_egui]
# version = "0.17"

[workspace.dependencies.kayak_ui]
branch = "multi-context"
git    = "https://github.com/StarArawn/kayak_ui"

[workspace.dependencies.kayak_font]
branch = "multi-context"
git    = "https://github.com/StarArawn/kayak_ui"

######################################
#########       Utility
######################################

[workspace.dependencies.big-brain]
git = "https://github.com/zkat/big-brain"

[workspace.dependencies.anyhow]
version = "1"

[workspace.dependencies.bitvec]
version = "1.0.1"

[workspace.dependencies.thiserror]
version = "1"

[workspace.dependencies.num-derive]
version = "0.3"

[workspace.dependencies.num-traits]
version = "0.2"

[workspace.dependencies.once_cell]
version = "1"

[workspace.dependencies.parking_lot]
version = "0.12"

[workspace.dependencies.smart-default]
version = "0.6"

[workspace.dependencies.strum]
features = ["derive"]
version  = "0.24"

######################################
######################################
#########       Package/Optional Dependencies
######################################
######################################

######################################
#########       Build Dependencies
######################################
[build-dependencies]
embed-resource = "1.4"

######################################
#########       Release
######################################
[dependencies.bevy_embedded_assets]
git      = "https://github.com/vleue/bevy_embedded_assets"
optional = true

######################################
#########       Debug
######################################
[dependencies.bevy-inspector-egui]
branch   = "rework"
git      = "https://github.com/jakobhellermann/bevy-inspector-egui"
optional = true

[dependencies.bevy_mod_debugdump]
git      = "https://github.com/jakobhellermann/bevy_mod_debugdump"
optional = true

[dependencies.colored]
optional = true
version  = "2"

######################################
#########       Parallel
######################################
[dependencies.rayon]
git      = "https://github.com/rayon-rs/rayon"
optional = true

[dependencies.bevy]
workspace = true
[dependencies.bevy_asset_loader]
workspace = true
[dependencies.bevy_common_assets]
workspace = true
[dependencies.bevy_tweening]
workspace = true
[dependencies.leafwing-input-manager]
workspace = true
[dependencies.bevy_ecs_tilemap]
workspace = true
[dependencies.bevy_tileset]
workspace = true
[dependencies.ron]
workspace = true
[dependencies.serde]
workspace = true
[dependencies.iyes_loopless]
workspace = true
[dependencies.iyes_progress]
workspace = true
[dependencies.banana_bevy_utils]
workspace = true
[dependencies.noise]
workspace = true
[dependencies.rand]
workspace = true
[dependencies.rand_pcg]
workspace = true
[dependencies.rand_seeder]
workspace = true
[dependencies.xxhash-rust]
workspace = true
# [dependencies.bevy_egui]
# workspace = true
[dependencies.big-brain]
workspace = true
[dependencies.num-derive]
workspace = true
[dependencies.num-traits]
workspace = true
[dependencies.once_cell]
workspace = true
[dependencies.parking_lot]
workspace = true
[dependencies.smart-default]
workspace = true
[dependencies.strum]
workspace = true
[dependencies.kayak_font]
workspace = true
[dependencies.kayak_ui]
workspace = true
