#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "BigBanana <lecoqjacob@gmail.com>"]
description = "Away Team Roguelike Game"
edition     = "2021"
homepage    = "https://github.com/Laocoon7/atrl"
license     = "BlueOak-1.0.0"
name        = "atrl"
readme      = "README.md"
repository  = "https://github.com/Laocoon7/atrl"
version     = "0.1.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/", "crates/"]
keywords   = ["game", "ascii", "roguelike"]
resolver   = "2"

#################################
#########       Workspaces
#################################
[workspace]
members = ["tools/ci", "tools/spancmp", "./crates/*"]

#################################
#########       Features
#################################
[features]
# configuration for release builds
release = [
  "bevy_embedded_assets",
  "atrl-camera/release",
  "atrl-common/release",
  "atrl-data/release",
  "atrl-game/release",
  "atrl-map-gen/release",
  "atrl-renderer/release",
  "atrl-raws/release",
]

# default configurations
default = ["dev"]

# configuration for debugging information
debug = [
  "egui_dock",
  "bevy-inspector-egui",
  "colored",
  "debug-graph",
  # "debug_asset_server",
  "trace",
  "atrl-camera/debug",
  "atrl-common/debug",
  "atrl-data/debug",
  "atrl-game/debug",
  "atrl-map-gen/debug",
  "atrl-renderer/debug",
  "atrl-raws/debug",
]

# default configuration while developing
dev = [
  "bevy/filesystem_watcher",
  "bevy/dynamic",
  "atrl-camera/dev",
  "atrl-common/dev",
  "atrl-data/dev",
  "atrl-game/dev",
  "atrl-map-gen/dev",
  "atrl-renderer/dev",
  "atrl-raws/dev",
]

# Parallelism
parallel = ["rayon"]

# Debugging
debug-graph        = ["bevy_mod_debugdump"]
debug_asset_server = ["bevy/debug_asset_server"]

# Tracing
trace        = ["bevy/trace"]
trace_chrome = ["bevy/trace_chrome"]
trace_tracy  = ["bevy/trace_tracy"]
wgpu_trace   = ["bevy/wgpu_trace"]

################################
#########       Optimizations
################################

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

################################
#########       Internal Crate Dependencies
################################
[workspace.dependencies]
atrl-camera   = { path = "crates/camera" }
atrl-common   = { path = "crates/common" }
atrl-data     = { path = "crates/data" }
atrl-game     = { path = "crates/game" }
atrl-macros   = { path = "crates/macros" }
atrl-map-gen  = { path = "crates/map_gen" }
atrl-raws     = { path = "crates/raws" }
atrl-renderer = { path = "crates/render" }
atrl-saveload = { path = "crates/saveload" }

[dependencies]
atrl-camera   = { workspace = true }
atrl-common   = { workspace = true }
atrl-data     = { workspace = true }
atrl-game     = { workspace = true }
atrl-map-gen  = { workspace = true }
atrl-raws     = { workspace = true }
atrl-renderer = { workspace = true }

######################################
#########       Bevy
######################################
[workspace.dependencies.bevy]
default-features = false
features = [
  "bevy_asset",
  "bevy_winit",
  "png",
  "x11",
  "bevy_scene",
  "wayland",
  "bevy_core_pipeline",

  # Render
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",

  # File formats
  "png",
  "jpeg",
  "bmp",

  # Serialization
  "serialize",
]
version = "0.9"

######################################
#########       Assets
######################################
[workspace.dependencies.bevy_asset_loader]
features = ["stageless", "2d", "progress_tracking_stageless"]
git      = "https://github.com/banana-studios/bevy_asset_loader"
rev      = "a1f6752d2b2ecb4d23b151b143ef53d27af7cca0"

[workspace.dependencies.bevy_common_assets]
features = ["ron", "toml", "json"]
version  = "0.4"

[workspace.dependencies.bevy_tweening]
features = ["bevy_asset"]
version  = "0.6"

######################################
#########       Input
######################################
[workspace.dependencies.leafwing-input-manager]
# features = ["egui"]
version = "0.7.0"

######################################
#########       Map Rendering
######################################
[workspace.dependencies.bevy_ecs_tilemap]
features = []
version  = "0.9"

[workspace.dependencies.bevy_tileset]
features = ["auto-tile"]
version  = "0.6"

[workspace.dependencies.bevy_tile_atlas]
default-features = false
version          = "0.5"

###############################
#########       Serialization   
###############################
[workspace.dependencies.ron]
version = "0.8"

[workspace.dependencies.serde]
features = ["derive"]
version  = "1"

######################################
#########       States
######################################
[workspace.dependencies.iyes_loopless]
features = ["states"]
#git      = "https://github.com/IyesGames/iyes_loopless.git"
git = "https://github.com/banana-studios/iyes_loopless.git"

[workspace.dependencies.iyes_progress]
features = ["assets"]
git      = "https://github.com/banana-studios/iyes_progress"
rev      = "1f8726fb2daa87232f751d7ced86432e11a0000c"

######################################
#########       Random
######################################
[workspace.dependencies.noise]
version = "0.8"

[workspace.dependencies.rand]
version = "0.8"

[workspace.dependencies.rand_pcg]
features = ["serde1"]
version  = "0.3"

[workspace.dependencies.rand_seeder]
version = "0.2"

[workspace.dependencies.xxhash-rust]
features = ["xxh3", "const_xxh3"]
version  = "0.8"

######################################
#########       UI
######################################
# [workspace.dependencies.bevy_egui]
# version = "0.17"

[workspace.dependencies.kayak_ui]
git = "https://github.com/StarArawn/kayak_ui"

[workspace.dependencies.kayak_font]
git = "https://github.com/StarArawn/kayak_ui"

######################################
#########       Utility
######################################

[workspace.dependencies.big-brain]
git = "https://github.com/zkat/big-brain"

[workspace.dependencies.anyhow]
version = "1"

[workspace.dependencies.bitvec]
features = ["serde"]
version  = "1.0.1"

[workspace.dependencies.thiserror]
version = "1"

[workspace.dependencies.num-derive]
version = "0.3"

[workspace.dependencies.num-traits]
version = "0.2"

[workspace.dependencies.once_cell]
version = "1"

[workspace.dependencies.parking_lot]
version = "0.12"

[workspace.dependencies.smart-default]
version = "0.6"

[workspace.dependencies.strum]
features = ["derive"]
version  = "0.24"

[workspace.dependencies.bitflags]
version = "1"

######################################
######################################
#########       Package/Optional Dependencies
######################################
######################################

######################################
#########       Build Dependencies
######################################
[build-dependencies]
embed-resource = "1.4"

######################################
#########       Release
######################################
[dependencies.bevy_embedded_assets]
git      = "https://github.com/vleue/bevy_embedded_assets"
optional = true

######################################
#########       Debug
######################################
[dependencies.bevy-inspector-egui]
branch   = "rework"
git      = "https://github.com/jakobhellermann/bevy-inspector-egui"
optional = true

[dependencies.egui_dock]
git      = "https://github.com/Adanos020/egui_dock"
optional = true
rev      = "041e5f362c281c286a63edeef2f7d02dbd5d62f4"

[dependencies.bevy_mod_debugdump]
git      = "https://github.com/jakobhellermann/bevy_mod_debugdump"
optional = true

[dependencies.colored]
optional = true
version  = "2"

######################################
#########       Parallel
######################################
[dependencies.rayon]
git      = "https://github.com/rayon-rs/rayon"
optional = true

[dependencies.bevy]
workspace = true
[dependencies.bevy_asset_loader]
workspace = true
[dependencies.bevy_common_assets]
workspace = true
[dependencies.bevy_tweening]
workspace = true
[dependencies.leafwing-input-manager]
workspace = true
[dependencies.bevy_ecs_tilemap]
workspace = true
[dependencies.bevy_tileset]
workspace = true
[dependencies.ron]
workspace = true
[dependencies.serde]
workspace = true
[dependencies.iyes_loopless]
workspace = true
[dependencies.iyes_progress]
workspace = true
[dependencies.noise]
workspace = true
[dependencies.rand]
workspace = true
[dependencies.rand_pcg]
workspace = true
[dependencies.rand_seeder]
workspace = true
[dependencies.xxhash-rust]
workspace = true
[dependencies.big-brain]
workspace = true
[dependencies.num-derive]
workspace = true
[dependencies.num-traits]
workspace = true
[dependencies.once_cell]
workspace = true
[dependencies.parking_lot]
workspace = true
[dependencies.smart-default]
workspace = true
[dependencies.strum]
workspace = true
[dependencies.kayak_font]
workspace = true
[dependencies.kayak_ui]
workspace = true
[dependencies.bitflags]
workspace = true
