#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "BigBanana <lecoqjacob@gmail.com>"]
description = "Away Team Roguelike Game"
edition     = "2021"
homepage    = "https://github.com/Laocoon7/atrl"
license     = "BlueOak-1.0.0"
name        = "atrl"
readme      = "README.md"
repository  = "https://github.com/Laocoon7/atrl"
version     = "0.1.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/", "crates/"]
keywords   = ["game", "ascii", "roguelike"]
resolver   = "2"

#################################
#########       Workspaces
#################################
[workspace]
members = ["tools/ci", "tools/spancmp", "./crates/*"]

#################################
#########       Features
#################################
[features]
# configuration for release builds
release = [
  "bevy_embedded_assets",
  "atrl-data/release",
  "atrl-renderer/release",
  "atrl-raws/release",
]

# default configurations
default = ["dev"]

# configuration for debugging information
debug = [
  "bevy-inspector-egui",
  "debug-graph",
  # "debug_asset_server",
  "atrl-data/debug",
  "atrl-renderer/debug",
  "atrl-raws/debug",
]

debug-trace = ["debug", "trace"]

# default configuration while developing
dev = [
  "bevy/filesystem_watcher",
  "bevy/dynamic",
  "atrl-data/dev",
  "atrl-renderer/dev",
  "atrl-raws/dev",
]

# Parallelism
parallel = ["rayon"]

# Debugging
debug-graph        = ["bevy_mod_debugdump"]
debug_asset_server = ["bevy/debug_asset_server"]

# Tracing
trace        = ["bevy/trace"]
trace_chrome = ["bevy/trace_chrome"]
trace_tracy  = ["bevy/trace_tracy"]
wgpu_trace   = ["bevy/wgpu_trace"]

################################
#########       Optimizations
################################

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

################################
#########       Internal Crate Dependencies
################################
[workspace.dependencies]
atrl-data     = { path = "crates/data" }
atrl-raws     = { path = "crates/raws" }
atrl-renderer = { path = "crates/render" }
atrl-saveload = { path = "crates/saveload" }

[dependencies]
atrl-data     = { workspace = true }
atrl-raws     = { workspace = true }
atrl-renderer = { workspace = true }
atrl-saveload = { workspace = true }

bevy                   = { workspace = true }
bevy_ecs_tilemap       = { workspace = true }
bevy_tileset           = { workspace = true }
big-brain              = { workspace = true }
iyes_loopless          = { workspace = true }
kayak_font             = { workspace = true }
kayak_ui               = { workspace = true }
leafwing-input-manager = { workspace = true }

index_list    = { workspace = true }
num-traits    = { workspace = true }
rand          = { workspace = true }
rand_pcg      = { workspace = true }
smart-default = { workspace = true }

######################################
#########       Bevy
######################################
[workspace.dependencies.bevy]
default-features = false
features = [
  "bevy_asset",
  "bevy_winit",
  "png",
  "x11",
  "bevy_scene",
  "wayland",
  "bevy_core_pipeline",

  # Render
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",

  # File formats
  "png",
  "jpeg",
  "bmp",

  # Serialization
  "serialize",
]
version = "0.9"

######################################
#########       Assets
######################################
[workspace.dependencies.bevy_common_assets]
features = ["ron", "toml", "json"]
version  = "0.4"

[workspace.dependencies.bevy_tweening]
features = ["bevy_asset"]
version  = "0.6"

######################################
#########       Input
######################################
[workspace.dependencies.leafwing-input-manager]
version = "0.7.0"

######################################
#########       Map Rendering
######################################
[workspace.dependencies.bevy_ecs_tilemap]
features = []
# version  = "0.9"
git = "https://github.com/StarArawn/bevy_ecs_tilemap"

[workspace.dependencies.bevy_tileset]
features = ["auto-tile"]
version  = "0.6"

[workspace.dependencies.bevy_tile_atlas]
default-features = false
version          = "0.5"

###############################
#########       Serialization   
###############################
[workspace.dependencies.ron]
version = "0.8"

[workspace.dependencies.serde]
features = ["derive"]
version  = "1"

######################################
#########       States
######################################
[workspace.dependencies.iyes_loopless]
features = ["states"]
version  = "0.9"
#git      = "https://github.com/IyesGames/iyes_loopless.git"
# git = "https://github.com/banana-studios/iyes_loopless.git"

[workspace.dependencies.iyes_progress]
features = ["assets", "iyes_loopless"]
version  = "0.7"
# git = "https://github.com/banana-studios/iyes_progress"
# rev = "1f8726fb2daa87232f751d7ced86432e11a0000c"

######################################
#########       Random
######################################
[workspace.dependencies.noise]
version = "0.8"

[workspace.dependencies.rand]
version = "0.8"

[workspace.dependencies.rand_pcg]
features = ["serde1"]
version  = "0.3"

[workspace.dependencies.rand_seeder]
version = "0.2"

[workspace.dependencies.xxhash-rust]
features = ["xxh3", "const_xxh3"]
version  = "0.8"

######################################
#########       UI
######################################
# [workspace.dependencies.bevy_egui]
# version = "0.17"

[workspace.dependencies.kayak_ui]
git = "https://github.com/StarArawn/kayak_ui"

[workspace.dependencies.kayak_font]
git = "https://github.com/StarArawn/kayak_ui"

######################################
#########       Utility
######################################

[workspace.dependencies.arrayvec]
version = "0.7"

[workspace.dependencies.anyhow]
version = "1"

[workspace.dependencies.big-brain]
version = "0.15"

[workspace.dependencies.bitvec]
features = ["serde"]
version  = "1.0.1"

[workspace.dependencies.index_list]
version = "0.2.7"

[workspace.dependencies.num-derive]
version = "0.3"

[workspace.dependencies.num-traits]
version = "0.2"

[workspace.dependencies.parking_lot]
version = "0.12"

[workspace.dependencies.smart-default]
version = "0.6"

[workspace.dependencies.strum]
features = ["derive"]
version  = "0.24"

[workspace.dependencies.thiserror]
version = "1"

[workspace.dependencies.pathfinding]
version = "4"

[workspace.dependencies.ordered-float]
features = ["serde"]
version  = "3"

######################################
######################################
#########       Package/Optional Dependencies
######################################
######################################

######################################
#########       Release
######################################
[dependencies.bevy_embedded_assets]
optional = true
version  = "0.6"

######################################
#########       Debug
######################################
[dependencies.bevy-inspector-egui]
branch   = "rework"
git      = "https://github.com/jakobhellermann/bevy-inspector-egui"
optional = true

[dependencies.bevy_mod_debugdump]
optional = true
version  = "0.6"

######################################
#########       Parallel
######################################
[dependencies.rayon]
optional = true
version  = "1"

######################################
#########       Build Dependencies
######################################
[build-dependencies]
embed-resource = "1.4"
