[package]
categories  = ["games", "camera"]
description = "Away Team Roguelike Game Utils"
edition     = "2021"
license     = "BlueOak-1.0.0"
name        = "atrl-camera"
publish     = false
readme      = "../README.md"
repository  = "https://github.com/Laocoon7/atrl"
version     = "0.1.0"

[features]
debug   = []
dev     = []
release = []

[dependencies]
bevy              = { workspace = true }
iyes_loopless     = { workspace = true }
