[package]
categories  = ["games", "game-common"]
description = "Away Team Roguelike Game Utils"
edition     = "2021"
license     = "BlueOak-1.0.0"
name        = "atrl-common"
publish     = false
readme      = "../README.md"
repository  = "https://github.com/Laocoon7/atrl"
version     = "0.1.0"

[dependencies]
atrl-components = { path = "../components" }

banana_bevy_utils   = {workspace = true}
bevy                = {workspace = true}
iyes_loopless       = {workspace = true}
parking_lot         = {workspace = true}
serde               = {workspace = true}
thiserror           = {workspace = true}

######################################
############    Random    ############
######################################
noise           = {workspace = true}
rand            = {workspace = true}
rand_pcg        = {workspace = true}
rand_seeder     = {workspace = true}
xxhash-rust     = {workspace = true}
