[package]
edition = "2021"
name    = "atrl-data"
version = "0.1.0"

[features]
debug   = []
dev     = []
release = []

[dependencies]
atrl-common  = { workspace = true }
atrl-map-gen = { workspace = true }

arrayvec               = { workspace = true }
bevy                   = { workspace = true }
bevy_tileset           = { workspace = true }
iyes_loopless          = { workspace = true }
leafwing-input-manager = { workspace = true }
num-derive             = { workspace = true }
num-traits             = { workspace = true }
once_cell              = { workspace = true }
ordered-float          = { workspace = true }
parking_lot            = { workspace = true }
pathfinding            = { workspace = true }
ron                    = { workspace = true }
serde                  = { workspace = true }
