[package]
edition = "2021"
name    = "atrl-data"
version = "0.1.0"

[features]
debug   = []
dev     = []
release = []

[dependencies]

bevy                   = { workspace = true }
bevy_ecs_tilemap       = { workspace = true }
bevy_tileset           = { workspace = true }
leafwing-input-manager = { workspace = true }

arrayvec      = { workspace = true }
bitvec        = { workspace = true }
index_list    = { workspace = true }
iyes_loopless = { workspace = true }
num-derive    = { workspace = true }
num-traits    = { workspace = true }
ordered-float = { workspace = true }
parking_lot   = { workspace = true }
pathfinding   = { workspace = true }
ron           = { workspace = true }
serde         = { workspace = true }
thiserror     = { workspace = true }
toml          = { workspace = true }

#################################
#########       Random
#################################
noise       = { workspace = true }
rand        = { workspace = true }
rand_pcg    = { workspace = true }
rand_seeder = { workspace = true }
xxhash-rust = { workspace = true }

line_drawing = "1"
