[package]
edition = "2021"
name    = "atrl-game"
version = "0.1.0"

[features]
debug   = ["bevy-inspector-egui"]
dev     = []
release = []

[dependencies]
banana_bevy_utils      = { workspace = true }
bevy                   = { workspace = true }
bevy_ecs_tilemap       = { workspace = true }
bevy_tileset           = { workspace = true }
big-brain              = { workspace = true }
iyes_loopless          = { workspace = true }
leafwing-input-manager = { workspace = true }
smart-default          = { workspace = true }

atrl-camera   = { workspace = true }
atrl-common   = { workspace = true }
atrl-map      = { workspace = true }
atrl-raws     = { workspace = true }
atrl-saveload = { workspace = true }
atrl-ui       = { workspace = true }

[dependencies.bevy-inspector-egui]
optional = true
version  = "0.14"
