[package]
categories  = ["games", "game", "core"]
description = "Away Team Roguelike Game Utils"
edition     = "2021"
license     = "BlueOak-1.0.0"
name        = "atrl-game"
publish     = false
readme      = "../README.md"
repository  = "https://github.com/Laocoon7/atrl"
version     = "0.1.0"

[features]
debug   = ["bevy-inspector-egui"]
dev     = []
release = []

[dependencies]
bevy                   = { workspace = true }
bevy_ecs_tilemap       = { workspace = true }
bevy_tileset           = { workspace = true }
big-brain              = { workspace = true }
iyes_loopless          = { workspace = true }
leafwing-input-manager = { workspace = true }
num-traits             = { workspace = true }
rand                   = { workspace = true }
rand_pcg               = { workspace = true }
smart-default          = { workspace = true }

atrl-camera   = { workspace = true }
atrl-common   = { workspace = true }
atrl-data     = { workspace = true }
atrl-map-gen  = { workspace = true }
atrl-raws     = { workspace = true }
atrl-renderer = { workspace = true }
atrl-saveload = { workspace = true }

[dependencies.bevy-inspector-egui]
optional = true
version  = "0.14"
