[package]
name = "atrl-map"
version = "0.1.0"
edition = "2021"

[features]
debug = []
dev = []
release = []

[dependencies]
atrl-common         = {workspace = true}
bevy                = {workspace = true}
banana_bevy_utils   = {workspace = true}
iyes_loopless       = {workspace = true}
bevy_ecs_tilemap    = {workspace = true}
bevy_tileset        = {workspace = true}
smart-default       = {workspace = true}