[package]
categories  = ["games", "game-common"]
description = "Away Team Roguelike Game Utils"
edition     = "2021"
license     = "BlueOak-1.0.0"
name        = "atrl-raws"
publish     = false
readme      = "../README.md"
repository  = "https://github.com/Laocoon7/atrl"
version     = "0.1.0"

[features]
debug   = []
dev     = []
release = []

[dependencies]
atrl-data = { workspace = true }

bevy                   = { workspace = true }
bevy_tileset           = { workspace = true }
big-brain              = { workspace = true }
iyes_loopless          = { workspace = true }
iyes_progress          = { workspace = true }
kayak_ui               = { workspace = true }
leafwing-input-manager = { workspace = true }

ron           = { workspace = true }
serde         = { workspace = true }
smart-default = { workspace = true }
